# yoga

./: .gitignore  BeagleYoga.podspec  BeagleYogaKit.podspec  gradle.properties  local.properties  maven-publish.gradle
.github/workflows/: release.yml
android/: build.gradle  local.properties
fastlane/: Fastfile
flutter/: .gitignore  README.md  pubspec.yaml
flutter/android/: build.gradle
flutter/example/: example.md
flutter/example/android/: build.gradle
flutter/example/lib/: main.dart
flutter/ios/: yoga_engine.podspec
flutter/ios/Classes/: SwiftYogaEnginePlugin.swift  YogaEnginePlugin.m
flutter/lib/: yoga_engine.dart
flutter/lib/ffi/: mapper.dart  utils.dart
flutter/lib/layout/: yoga_node.dart
flutter/lib/src/: yoga_initializer.dart
flutter/test/: yoga_engine_test.dart
flutter/test/ffi/: mapper_test.dart
flutter/test/layout/: yoga_node_test.dart  yoga_render_test.dart
flutter/test/utils/: methods_test.dart  node_helper_test.dart
java/: build.gradle
java/proguard-annotations/: build.gradle
lib/fb/: build.gradle
sample/: build.gradle
testutil/: build.gradle
yoga/: Yoga.cpp
yoga/event/: event.h
yoga_engine/: .gitignore
yoga_engine/android/: CMakeLists.txt  settings.gradle
yoga_engine/android/src/main/: AndroidManifest.xml
yoga_engine/android/src/main/kotlin/br/com/zup/yoga_engine/: YogaEnginePlugin.kt
yoga_engine/example/lib/: main.dart
yoga_engine/example/test/: widget_test.dart
yoga_engine/ios/Classes/: YogaEnginePlugin.h
yoga_engine/lib/: yoga_engine.dart
yogacore/: build.gradle
(+8 files in other folders)
